--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kazan",
   "version": "1.0.0",
-  "description": "",
-  "main": "tailwind.config.js",
+  "description": "for tailwind",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/dezhik74/KAZAN#readme",
   "devDependencies": {
-    "@tailwindcss/cli": "^4.1.13",
+    "@tailwindcss/cli": "^4.1.14",
     "@tailwindcss/typography": "^0.5.19",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.14"
   }
 }
